# prog

./: CMakeLists.txt  README.md
Labs/Lab1/: lab1.cpp  report1.md
Labs/Lab2/: lab2.cpp  report2.md
Labs/Lab3/: lab3.cpp  report3.md
Labs/Lab4/: a.out  helper.cpp  helper.h  helper.h.gch  main.cpp  report4.md
Labs/Lab5/: lab5.cpp  report5.md
Labs/Lab6/: Weather.html  lab6.cpp  report6.md  res.html
Labs/Lab7/: report7.md
Labs/Lab8/: report8.md
Labs/Lab9/: report9.md
Labs/Lab9/Lab9_Project_for_tests/: IKeypad.h  ILatch.h  Project.pro  lockcontroller.cpp  lockcontroller.h
Labs/Lab9/lab9_test/: _test.cc  gtest_dependency.pri  lab9_test.pro  main.cpp  tst_testdivisionbyzero.h
Tasks/: CMakeLists.txt
Tasks/Task1-5/: task1-5.cpp
Tasks/Task10/: task10.cpp
Tasks/Task11/: task11.cpp
Tasks/Task12/: task12.cpp
Tasks/Task13/: task13.cpp
Tasks/Task14/: task14.cpp
Tasks/Task15/: task15.cpp
Tasks/Task16/: task16.cpp
Tasks/Task17/: task17.cpp
Tasks/Task18/: task18.cpp
Tasks/Task19/: task19.cpp
Tasks/Task20/: task20.cpp
Tasks/Task21/: task21.cpp
Tasks/Task22/: task22.cpp
Tasks/Task23/: task23.cpp
Tasks/Task24/: task24.cpp
Tasks/Task25/: task25.cpp
Tasks/Task26/: task26.cpp
Tasks/Task27/: task27.cpp
Tasks/Task28/: task28.cpp
Tasks/Task29/: comp_task29  name  task29.cpp
Tasks/Task30/: t30.cpp
Tasks/Task31/: task31.cpp
Tasks/Task32/: task32.cpp
Tasks/Task33/: fighter.cpp  fighter.h  task33.cpp
Tasks/Task6/: task6.cpp
Tasks/Task7/: task7.cpp
Tasks/Task8/: task8.cpp
Tasks/Task9/: task9.cpp
