cmake_minimum_required(VERSION 3.14)
project(Works)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task6 Tasks/Task6/task6.cpp)
add_executable(Task1-5 Tasks/Task1-5/task1-5.cpp)
add_executable(Task7 Tasks/Task7/task7.cpp)
add_executable(Task8 Tasks/Task8/task8.cpp)

add_executable(Lab1 Labs/Lab1/lab1.cpp)