cmake_minimum_required(VERSION 3.14)
project(Works)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task1-5 Tasks/Task1-5/task1-5.cpp)
add_executable(Task6 Tasks/Task6/task6.cpp)
add_executable(Task7 Tasks/Task7/task7.cpp)
add_executable(Task8 Tasks/Task8/task8.cpp)
add_executable(Task9 Tasks/Task9/task9.cpp)
add_executable(Task10 Tasks/Task10/task10.cpp)
add_executable(Task11 Tasks/Task11/task11.cpp)
add_executable(Task12 Tasks/Task12/task12.cpp)
add_executable(Task13 Tasks/Task13/task13.cpp)
add_executable(Task14 Tasks/Task14/task14.cpp)
add_executable(Task15 Tasks/Task15/task15.cpp)
add_executable(Task16 Tasks/Task16/task16.cpp)
add_executable(Task17 Tasks/Task17/task17.cpp)
add_executable(Task18 Tasks/Task18/task18.cpp)
add_executable(Task19 Tasks/Task19/task19.cpp)
add_executable(Task20 Tasks/Task20/task20.cpp)
add_executable(Task21 Tasks/Task21/task21.cpp)
add_executable(Task22 Tasks/Task22/task22.cpp)
add_executable(Task23 Tasks/Task23/task23.cpp)
add_executable(Task24 Tasks/Task24/task24.cpp)
add_executable(Task25 Tasks/Task25/task25.cpp)
add_executable(Task26 Tasks/Task26/task26.cpp)
add_executable(Task27 Tasks/Task27/task27.cpp)
add_executable(Task29 Tasks/Task29/task29.cpp)
add_executable(Task28 Tasks/Task28/task28.cpp)
add_executable(Tasks30 Tasks/Task30/t30.cpp)
add_executable(Tasks31 Tasks/Task31/task31.cpp)

add_executable(Lab6  Labs/Lab6/lab6.cpp Labs/Lab6/httplib.h)
add_executable(Lab5  Labs/Lab5/lab5.cpp)
add_executable(Lab4 Labs/Lab4/helper.h Labs/Lab4/main.cpp Labs/Lab4/helper.cpp)
add_executable(Lab2 Labs/Lab2/lab2.cpp)
add_executable(Lab3 Labs/Lab3/libbmp.h Labs/Lab3/libbmp.cpp Labs/Lab3/lab3.cpp)
add_executable(Lab1 Labs/Lab1/lab1.cpp)
